@@ -172,9 +172,7 @@ public abstract class AbstractLuceneSearch<T extends BaseVO> {
             //遍历查询结果 把标题和内容替换为带高亮的最佳摘要
             for (ScoreDoc sd : tds.scoreDocs) {
                 Document doc = indexSearcher.doc(sd.doc);
-                @SuppressWarnings("deprecation")
-				T t = (T) this.getClazz().newInstance();
-                
+				T t = (T) this.getClazz().getConstructor().newInstance();              
                 Integer id = Integer.parseInt(doc.get("id"));
                 t.setId(id.longValue());
                 
